; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_pch_udc.c_pch_udc_ep_set_stall.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_pch_udc.c_pch_udc_ep_set_stall.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pch_udc_ep = type { i64 }

@UDC_EPCTL_ADDR = common dso_local global i32 0, align 4
@UDC_EPCTL_F = common dso_local global i32 0, align 4
@UDC_EPCTL_S = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pch_udc_ep*)* @pch_udc_ep_set_stall to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pch_udc_ep_set_stall(%struct.pch_udc_ep* %0) #0 {
  %2 = alloca %struct.pch_udc_ep*, align 8
  store %struct.pch_udc_ep* %0, %struct.pch_udc_ep** %2, align 8
  %3 = load %struct.pch_udc_ep*, %struct.pch_udc_ep** %2, align 8
  %4 = getelementptr inbounds %struct.pch_udc_ep, %struct.pch_udc_ep* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %16

7:                                                ; preds = %1
  %8 = load %struct.pch_udc_ep*, %struct.pch_udc_ep** %2, align 8
  %9 = load i32, i32* @UDC_EPCTL_ADDR, align 4
  %10 = load i32, i32* @UDC_EPCTL_F, align 4
  %11 = call i32 @pch_udc_ep_bit_set(%struct.pch_udc_ep* %8, i32 %9, i32 %10)
  %12 = load %struct.pch_udc_ep*, %struct.pch_udc_ep** %2, align 8
  %13 = load i32, i32* @UDC_EPCTL_ADDR, align 4
  %14 = load i32, i32* @UDC_EPCTL_S, align 4
  %15 = call i32 @pch_udc_ep_bit_set(%struct.pch_udc_ep* %12, i32 %13, i32 %14)
  br label %21

16:                                               ; preds = %1
  %17 = load %struct.pch_udc_ep*, %struct.pch_udc_ep** %2, align 8
  %18 = load i32, i32* @UDC_EPCTL_ADDR, align 4
  %19 = load i32, i32* @UDC_EPCTL_S, align 4
  %20 = call i32 @pch_udc_ep_bit_set(%struct.pch_udc_ep* %17, i32 %18, i32 %19)
  br label %21

21:                                               ; preds = %16, %7
  ret void
}

declare dso_local i32 @pch_udc_ep_bit_set(%struct.pch_udc_ep*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
